Update the pages

--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -11,17 +11,39 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+    </nav>
+
+    <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Education" Match="NavLinkMatch.All">
+                <span class="bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Education
             </NavLink>
         </div>
+    </nav>
+
+    <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="Skills" Match="NavLinkMatch.All">
+                <span class="bi-list-nested-nav-menu" aria-hidden="true"></span> Skills
+            </NavLink>
+        </div>
+    </nav>
+
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Experience" Match="NavLinkMatch.All">
+                <span class="bi-house-door-fill-nav-menu" aria-hidden="true"></span> Experience
+            </NavLink>
+        </div>
+    </nav>
+
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Projects" Match="NavLinkMatch.All">
+                <span class="bi-house-door-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
     </nav>
