--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,29 @@
 ﻿@page "/"
-
 <PageTitle>Home</PageTitle>
+<!-- Header Section -->
+<header class="header">
+    <h1 class="header h1">Hengyi Li</h1>
+    <p class="header p">Master of Computer Science | GFW Security Analyst | Dreamer | Coder | Content Creator </p>
+</header>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<body class="body">
+    <h2 class="h2">About Me</h2>
+    <p class="p">
+    Hello, this is Miles Lee, a passionate Computer Science graduate student at the University of California – Davis, specializing in GFW Security Analysis. 
+    With a solid academic foundation from Truman State University, where I majored in Computer Science, I have honed my skills in a diverse range of programming languages and technologies.
+    </p>
+    <br />
+    <!-- Contact Section -->
+    <h2 class ="h2">Contact Me</h2>
+    <ul class="ul">
+        <li class="li">Email: trdli@ucdavis.edu</li>
+        <li class="li">Phone: (816) 541-9947</li>
+        <li class="li">GitHub: github.com/TheRealMilesLee</li>
+        <li class="li">LinkedIn: linkedin.com/in/hengyi-li-968744191</li>
+        <li class="li">Personal Website: coderlee.tech.blog</li>
+    </ul>
+</body>
+<!-- Footer Section -->
+<footer class="footer">
+    <p>&copy; 2024 Hengyi Li. All rights reserved.</p>
+</footer>
