Update the site

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,5 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #1e1e1e; /* Dark background color */
 }
 
 h1:focus {
