--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -62,6 +62,16 @@ body {
     margin-bottom: 10px;
 }
 
+.section {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+    .section.visible {
+        opacity: 1;
+    }
+
+
 /* Footer Section */
 .footer {
     text-align: center;
@@ -92,3 +102,4 @@ body {
         font-size: 1rem;
     }
 }
+
