--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -11,7 +11,7 @@
     <Animate Anchor="#b-animate" Auto Animation="Animations.SlideLeft" DelayMilliseconds="1000">
     <CardDeck>
     <!-- About Me Section -->   
-        <Card>
+        <Card Background="Background.Dark">
             <CardHeader>
                 <h2 className="h2">About Me</h2>
             </CardHeader>
@@ -23,7 +23,7 @@
             </CardBody>
         </Card>
     <!--Project Section-->
-        <Card>
+        <Card Background="Background.Dark">
             <CardHeader>
                 <h2 className="h2">Projects</h2>
             </CardHeader>
@@ -34,7 +34,7 @@
             </CardBody>
         </Card>
     <!-- Skills Section -->
-        <Card>
+        <Card Background="Background.Dark">
             <CardHeader>
                 <h2 className="h2">Skills</h2>
             </CardHeader>
@@ -49,30 +49,16 @@
                 </CardText>
             </CardBody>
         </Card>
-    <!-- Contact Section -->
-        <Card>
-            <CardHeader>
-                <h2 className="h2">Contact Me</h2>
-            </CardHeader>
-            <CardBody>
-                <CardText>
-                    <ul className="ul">
-                        <li className="li">Email: trdli@ucdavis.edu</li>
-                        <li className="li">Phone: (816) 541-9947</li>
-                        <li className="li">GitHub: github.com/TheRealMilesLee</li>
-                        <li className="li">LinkedIn: linkedin.com/in/hengyi-li-968744191</li>
-                        <li className="li">Personal Website: coderlee.tech.blog</li>
-                    </ul>
-                </CardText>
-            </CardBody>
-        </Card>
     </CardDeck>
     </Animate>
+
 </body>
 <!-- Footer Section -->
 <Animate Anchor="#b-animate" Auto Animation="Animations.FadeIn" DelayMilliseconds="2750">
 <footer class="footer" @key="6">
-    <p>&copy; 2024 Hengyi Li. All rights reserved. | Contact me | </p>
+        <p> Email: trdli@ucdavis.edu | GitHub: github.com/TheRealMilesLee | LinkedIn: linkedin.com/in/hengyi-li-968744191</p>
+        <br />
+        <p>&copy; 2024 Hengyi Li. All rights reserved.</p>
 </footer>
 </Animate>
 
