Make the animation better

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -8,7 +8,7 @@
 </header>
 </Animate>
 <body class="body">
-    <Animate Anchor="#b-animate" Auto Animation="Animations.SlideLeft" DelayMilliseconds="1000">
+    <Animate Anchor="#b-animate" Auto Animation="Animations.SlideLeft">
     <CardDeck>
     <!-- About Me Section -->   
         <Card Background="Background.Dark">
@@ -54,7 +54,7 @@
 
 </body>
 <!-- Footer Section -->
-<Animate Anchor="#b-animate" Auto Animation="Animations.FadeIn" DelayMilliseconds="2750">
+<Animate Anchor="#b-animate" Auto Animation="Animations.FadeIn" DelayMilliseconds="1000">
 <footer class="footer" @key="6">
         <p> Email: trdli@ucdavis.edu | GitHub: github.com/TheRealMilesLee | LinkedIn: linkedin.com/in/hengyi-li-968744191</p>
         <br />
