--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,3 +11,5 @@
 @using Blazorise
 @using Blazorise.Animate
 @using Blazorise.Markdown
+@using Blazorise.Icons.FontAwesome
+@using Blazorise.Bootstrap
