--- a/Pages/Experience.razor
+++ b/Pages/Experience.razor
@@ -9,9 +9,8 @@
         <Card Class="experience-details" Background="Background.Dark">
             <CardHeader>
                 <h2 class="h2">
-                    University of California, Davis – Student Computer Technician (Oct 2023 – Current)
-                    
-                </h2>
+                    University of California, Davis – Student Computer Technician (Oct 2023 – Current) </h2>
+                <img src="images/UCDavisLogo.png" alt="UC Davis Logo" class="experience logo" style="height: 1.5rem;" />
             </CardHeader>
             <CardBody>
                 <p class="p italic">In my current role, I contribute to the smooth functioning of the university's computer systems, emphasizing:</p>
